// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JHipster cypress generator jwt-cypressAudit(false)-angular-withAdminUi(false)-cypressCoverage(false)-src/ should match generated files snapshot 1`] = `
Object {
  ".jhipster/EntityA.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "cypress.config.ts": Object {
    "stateCleared": "modified",
  },
  "package.json": Object {
    "stateCleared": "modified",
  },
  "test/cypress/.eslintrc.json": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/login-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/password-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/register-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/reset-password-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/settings-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/administration/administration.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/entity/entity-a.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/fixtures/integration-test.png": Object {
    "stateCleared": "modified",
  },
  "test/cypress/plugins/index.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/commands.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/entity.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/index.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/management.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/navbar.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/tsconfig.json": Object {
    "stateCleared": "modified",
  },
}
`;

exports[`JHipster cypress generator jwt-cypressAudit(true)-vue-withAdminUi(true)-cypressCoverage(true)-src/ should match generated files snapshot 1`] = `
Object {
  ".jhipster/EntityA.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "cypress-audits.config.ts": Object {
    "stateCleared": "modified",
  },
  "cypress.config.ts": Object {
    "stateCleared": "modified",
  },
  "package.json": Object {
    "stateCleared": "modified",
  },
  "test/cypress/.eslintrc.json": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/login-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/password-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/register-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/reset-password-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/account/settings-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/administration/administration.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/entity/entity-a.cy.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/e2e/lighthouse.audits.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/fixtures/integration-test.png": Object {
    "stateCleared": "modified",
  },
  "test/cypress/plugins/global.d.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/plugins/index.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/commands.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/entity.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/index.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/management.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/support/navbar.ts": Object {
    "stateCleared": "modified",
  },
  "test/cypress/tsconfig.json": Object {
    "stateCleared": "modified",
  },
}
`;

exports[`JHipster cypress generator oauth2-cypressAudit(false)-angular-withAdminUi(false)-cypressCoverage(false) should match generated files snapshot 1`] = `
Object {
  ".jhipster/EntityA.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "cypress.config.ts": Object {
    "stateCleared": "modified",
  },
  "package.json": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/.eslintrc.json": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/administration/administration.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/entity/entity-a.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/fixtures/integration-test.png": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/plugins/index.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/commands.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/entity.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/index.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/management.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/navbar.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/oauth2.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/tsconfig.json": Object {
    "stateCleared": "modified",
  },
}
`;

exports[`JHipster cypress generator oauth2-cypressAudit(true)-vue-withAdminUi(true)-cypressCoverage(true)-src/main/webapp2/ should match generated files snapshot 1`] = `
Object {
  ".jhipster/EntityA.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "cypress-audits.config.ts": Object {
    "stateCleared": "modified",
  },
  "cypress.config.ts": Object {
    "stateCleared": "modified",
  },
  "package.json": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/.eslintrc.json": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/administration/administration.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/entity/entity-a.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/lighthouse.audits.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/fixtures/integration-test.png": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/plugins/global.d.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/plugins/index.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/commands.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/entity.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/index.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/management.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/navbar.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/oauth2.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/tsconfig.json": Object {
    "stateCleared": "modified",
  },
}
`;

exports[`JHipster cypress generator samples matrix should match snapshot 1`] = `
Object {
  "jwt-cypressAudit(false)-angular-withAdminUi(false)-cypressCoverage(false)-src/": Object {
    "applicationWithEntities": Object {
      "config": Object {
        "authenticationType": "jwt",
        "baseName": "jhipster",
        "clientFramework": "angular",
        "clientSrcDir": "src/",
        "clientTestDir": "test/",
        "cypressAudit": false,
        "cypressCoverage": false,
        "testFrameworks": Array [
          "cypress",
        ],
        "withAdminUi": false,
      },
      "entities": Array [
        Object {
          "changelogDate": "20220129025419",
          "name": "EntityA",
        },
      ],
    },
    "skipInstall": true,
  },
  "jwt-cypressAudit(true)-vue-withAdminUi(true)-cypressCoverage(true)-src/": Object {
    "applicationWithEntities": Object {
      "config": Object {
        "authenticationType": "jwt",
        "baseName": "jhipster",
        "clientFramework": "vue",
        "clientSrcDir": "src/",
        "clientTestDir": "test/",
        "cypressAudit": true,
        "cypressCoverage": true,
        "testFrameworks": Array [
          "cypress",
        ],
        "withAdminUi": true,
      },
      "entities": Array [
        Object {
          "changelogDate": "20220129025419",
          "name": "EntityA",
        },
      ],
    },
    "skipInstall": true,
  },
  "oauth2-cypressAudit(false)-angular-withAdminUi(false)-cypressCoverage(false)": Object {
    "applicationWithEntities": Object {
      "config": Object {
        "authenticationType": "oauth2",
        "baseName": "jhipster",
        "clientFramework": "angular",
        "clientSrcDir": undefined,
        "cypressAudit": false,
        "cypressCoverage": false,
        "testFrameworks": Array [
          "cypress",
        ],
        "withAdminUi": false,
      },
      "entities": Array [
        Object {
          "changelogDate": "20220129025419",
          "name": "EntityA",
        },
      ],
    },
    "skipInstall": true,
  },
  "oauth2-cypressAudit(true)-vue-withAdminUi(true)-cypressCoverage(true)-src/main/webapp2/": Object {
    "applicationWithEntities": Object {
      "config": Object {
        "authenticationType": "oauth2",
        "baseName": "jhipster",
        "clientFramework": "vue",
        "clientSrcDir": "src/main/webapp2/",
        "clientTestDir": "src/test/javascript2/",
        "cypressAudit": true,
        "cypressCoverage": true,
        "testFrameworks": Array [
          "cypress",
        ],
        "withAdminUi": true,
      },
      "entities": Array [
        Object {
          "changelogDate": "20220129025419",
          "name": "EntityA",
        },
      ],
    },
    "skipInstall": true,
  },
  "session-cypressAudit(false)-angular-withAdminUi(false)-cypressCoverage(false)-src/main/webapp2/": Object {
    "applicationWithEntities": Object {
      "config": Object {
        "authenticationType": "session",
        "baseName": "jhipster",
        "clientFramework": "angular",
        "clientSrcDir": "src/main/webapp2/",
        "clientTestDir": "src/test/javascript2/",
        "cypressAudit": false,
        "cypressCoverage": false,
        "testFrameworks": Array [
          "cypress",
        ],
        "withAdminUi": false,
      },
      "entities": Array [
        Object {
          "changelogDate": "20220129025419",
          "name": "EntityA",
        },
      ],
    },
    "skipInstall": true,
  },
  "session-cypressAudit(true)-vue-withAdminUi(true)-cypressCoverage(true)": Object {
    "applicationWithEntities": Object {
      "config": Object {
        "authenticationType": "session",
        "baseName": "jhipster",
        "clientFramework": "vue",
        "clientSrcDir": undefined,
        "cypressAudit": true,
        "cypressCoverage": true,
        "testFrameworks": Array [
          "cypress",
        ],
        "withAdminUi": true,
      },
      "entities": Array [
        Object {
          "changelogDate": "20220129025419",
          "name": "EntityA",
        },
      ],
    },
    "skipInstall": true,
  },
}
`;

exports[`JHipster cypress generator session-cypressAudit(false)-angular-withAdminUi(false)-cypressCoverage(false)-src/main/webapp2/ should match generated files snapshot 1`] = `
Object {
  ".jhipster/EntityA.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "cypress.config.ts": Object {
    "stateCleared": "modified",
  },
  "package.json": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/.eslintrc.json": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/account/login-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/account/password-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/account/register-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/account/reset-password-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/account/settings-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/administration/administration.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/e2e/entity/entity-a.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/fixtures/integration-test.png": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/plugins/index.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/commands.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/entity.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/index.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/management.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/support/navbar.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript2/cypress/tsconfig.json": Object {
    "stateCleared": "modified",
  },
}
`;

exports[`JHipster cypress generator session-cypressAudit(true)-vue-withAdminUi(true)-cypressCoverage(true) should match generated files snapshot 1`] = `
Object {
  ".jhipster/EntityA.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "cypress-audits.config.ts": Object {
    "stateCleared": "modified",
  },
  "cypress.config.ts": Object {
    "stateCleared": "modified",
  },
  "package.json": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/.eslintrc.json": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/account/login-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/account/password-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/account/register-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/account/reset-password-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/account/settings-page.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/administration/administration.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/entity/entity-a.cy.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/e2e/lighthouse.audits.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/fixtures/integration-test.png": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/plugins/global.d.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/plugins/index.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/commands.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/entity.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/index.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/management.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/support/navbar.ts": Object {
    "stateCleared": "modified",
  },
  "src/test/javascript/cypress/tsconfig.json": Object {
    "stateCleared": "modified",
  },
}
`;
